--- a/src/components/base.css
+++ b/src/components/base.css
@@ -78,6 +78,10 @@ h3 {
   font-weight: normal;
 }
 
+h3 {
+  font-size: 1.25em
+}
+
 .blog h1 {
   font-size: 2em;
 }
@@ -157,16 +161,17 @@ p {
 }
 
 #header {
-  position: fixed;
   top: 0;
   transition: transform 300ms ease-in-out;
   transform: translateY(0);
   z-index: 100;
-  width: 100%;
+  width: 100vw;
 }
 
-#header.hide {
-  transform: translateY(-100%);
+@media only screen and (min-width: 639px) {
+  #header.hide {
+    transform: translateY(-100%);
+  }
 }
 
 /**
@@ -208,4 +213,176 @@ p {
   margin-right: auto;
   text-align: center;
   width: 80%;
+}
+
+.carousel__dot-group {
+  display: flex;
+  justify-content: center;
+  margin-top: 24px;
+}
+
+.carousel__dot {
+  background-color: #9A9A9A;
+  border-radius: 50%;
+  height: 10px;
+  width: 10px;
+  margin-left: 7px;
+  margin-right: 6px;
+  transition: background-color 300ms ease-out;
+}
+
+.carousel__dot--selected {
+  background-color: black;
+}
+
+.is-dark .carousel__dot--selected {
+  background-color: white;
+}
+
+.menu {
+  display: block;
+  position: absolute;
+  top: 36px;
+  right: 24px;
+  
+  z-index: 1;
+  
+  -webkit-user-select: none;
+  user-select: none;
+}
+
+.menu input {
+  display: block;
+  width: 36px;
+  height: 32px;
+  position: absolute;
+  
+  cursor: pointer;
+  
+  opacity: 0; /* hide this */
+  z-index: 2; /* and place it over the hamburger */
+  
+  -webkit-touch-callout: none;
+}
+
+.menu span {
+  display: block;
+  width: 33px;
+  height: 2px;
+  margin-bottom: 8px;
+  position: relative;
+  
+  background: black;
+  border-radius: 3px;
+  
+  z-index: 1;
+  
+  transform-origin: 4px 0px;
+  
+  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+              background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+              opacity 0.55s ease;
+}
+
+.menu span:first-child {
+  transform-origin: 0% 0%;
+}
+
+.menu span:nth-last-child(2) {
+  transform-origin: 0% 100%;
+}
+
+.menu input:checked ~ span {
+  opacity: 1;
+  transform: rotate(45deg) translate(-3px, -15px);
+  background: white;
+}
+
+.menu input:checked ~ span:nth-last-child(3) {
+  transform: rotate(-45deg) translate(-8px, 17px);
+}
+
+.nav {
+  top: 0;
+  right: -1px;
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  margin: 0;
+  padding: 50px;
+  
+  background: black;
+  color: white;
+  list-style-type: none;
+  -webkit-font-smoothing: antialiased;
+  /* to stop flickering of text in safari */
+  
+  transform-origin: 0% 0%;
+  transform: translate(100vw, 0);
+  
+  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+}
+
+.menu input:checked ~ .nav {
+  transform: none;
+}
+
+.nav a {
+  display: block;
+}
+
+.mobile-social svg path {
+  fill: white;
+}
+
+.brands {
+  overflow-x: scroll;
+  overflow-y: hidden;
+  width: 100%;
+  white-space: nowrap;
+}
+
+@media only screen and (min-width: 639px) {
+  .brands {
+    display: flex;
+  }
+}
+
+.sunWrapper {
+  position: absolute;
+  top: calc(100vh - 200px);
+  width: 100vw;
+}
+
+.sun {
+  height: 215px;
+  width: 215px;
+  margin: 0 auto;
+}
+
+@media only screen and (min-width: 639px) {
+  .sunWrapper {
+    width: calc(100vw + 200px);
+    margin-left: -100px;
+    top: auto;
+  }
+
+  .sunWrapper.transition {
+    animation: drawArc1 3s linear;
+  }
+
+  .sunWrapper.transition .sun {
+    animation: drawArc2 3s linear;
+    margin: initial;
+  }
+}
+
+@keyframes drawArc1 {
+  0%   { transform: rotate(180deg);  }
+  100% { transform: rotate(0deg);    }
+}
+
+@keyframes drawArc2 {
+  0%   { transform: rotate(-180deg); }
+  100% { transform: rotate(0deg);    }
 }
