--- a/src/components/hero.module.css
+++ b/src/components/hero.module.css
@@ -14,6 +14,20 @@
   justify-content: center;
 }
 
+@media only screen and (min-width: 639px) {
+  .heroHeadline {
+    height: calc(100vh - 5rem);
+  }
+}
+
+.image {
+  max-width: 716px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
+
 .heroHeadline h3 {
   max-width: 500px
 }
@@ -25,5 +39,11 @@
 }
 
 .heroImageWrapper {
-  margin-bottom: 250px;
+  margin-bottom: 28px;
+}
+
+@media only screen and (min-width: 639px) {
+  .heroImageWrapper {
+    margin-bottom: 250px;
+  }
 }
