--- a/src/components/base.css
+++ b/src/components/base.css
@@ -304,7 +304,7 @@ p {
 
 .nav {
   top: 0;
-  right: -1px;
+  right: 0;
   position: fixed;
   width: 100vw;
   height: 100vh;
@@ -342,6 +342,16 @@ p {
   white-space: nowrap;
 }
 
+.shading {
+  background: linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%);
+  height: 150px;
+  margin-top: -150px;
+  position: absolute;
+  right: 0;
+  width: 50px;
+  z-index: 1;
+}
+
 @media only screen and (min-width: 639px) {
   .brands {
     display: flex;
@@ -355,6 +365,7 @@ p {
 }
 
 .sun {
+  display: inline-block;
   height: 215px;
   width: 215px;
   margin: 0 auto;
@@ -362,27 +373,55 @@ p {
 
 @media only screen and (min-width: 639px) {
   .sunWrapper {
-    width: calc(100vw + 200px);
-    margin-left: -100px;
+    /* width: calc(100vw + 200px); */
+    width: auto;
+    /* margin-left: -100px; */
     top: auto;
-  }
-
-  .sunWrapper.transition {
-    animation: drawArc1 3s linear;
+    left: 0;
   }
 
   .sunWrapper.transition .sun {
-    animation: drawArc2 3s linear;
+    animation: drawArc 3s linear;
     margin: initial;
   }
 }
 
-@keyframes drawArc1 {
-  0%   { transform: rotate(180deg);  }
-  100% { transform: rotate(0deg);    }
+@keyframes drawArc {
+  0%  { -webkit-transform: rotate(0deg) translateX(100vw) translateY(0) rotate(0deg); }
+  50%  { -webkit-transform: rotate(-90deg) translateX(50vw) translateY(0) rotate(90deg); }
+  100%  { -webkit-transform: rotate(-180deg) translateX(0) translateY(0) rotate(180deg); }
 }
 
-@keyframes drawArc2 {
-  0%   { transform: rotate(-180deg); }
-  100% { transform: rotate(0deg);    }
+.speakingImage {
+  width: auto;
+  height: 125px;
+  float: right;
 }
+
+.speakingImage.last {
+  height: 150px;
+}
+
+.speaking {
+  padding-bottom: 100px;
+}
+
+@media only screen and (min-width: 639px) {
+  .speaking {
+    background-color: white;
+    background-image: url('/grey-bg.png');
+    background-position: top 20vw center;
+    background-repeat: no-repeat;
+    background-size: 100% calc(100% - 20vw);
+  }
+
+  .speakingImage {
+    float: none;
+    height: 200px;
+  }
+
+  .speakingImage.last {
+    height: 150px;
+  }
+}
+
