--- a/src/components/footer.module.css
+++ b/src/components/footer.module.css
@@ -1,5 +1,11 @@
 .footer {
-  padding-bottom: 71px;
+  padding-bottom: 15px;
+}
+
+@media only screen and (min-width: 639px) {
+  .footer {
+    padding-bottom: 71px;
+  }
 }
 
 .footer:before {
