--- a/src/components/hero.module.css
+++ b/src/components/hero.module.css
@@ -6,8 +6,8 @@
 
 .heroHeadline {
   height: calc(100vh - 5rem);
-  top: 0;
-  position: sticky;
+  top: 5rem;
+  
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -17,6 +17,7 @@
 @media only screen and (min-width: 639px) {
   .heroHeadline {
     height: calc(100vh - 5rem);
+    position: sticky;
   }
 }
 
