--- a/src/components/hero.module.css
+++ b/src/components/hero.module.css
@@ -5,8 +5,9 @@
 }
 
 .heroHeadline {
-  height: calc(100vh - 7rem);
-  top: 5rem;
+  height: calc(100vh + 5rem);
+  margin-top: -5rem;
+  margin-bottom: 5rem;
   
   display: flex;
   align-items: center;
@@ -16,6 +17,7 @@
 
 @media only screen and (min-width: 639px) {
   .heroHeadline {
+    height: calc(100vh - 7rem);
     position: sticky;
   }
 }
