--- a/src/pages/home.module.css
+++ b/src/pages/home.module.css
@@ -15,24 +15,33 @@
   margin-bottom: 30px;
 }
 
-.homeCopyWrapper:after {
+.homeCopy strong {
+  font-family: "AllianceNo1-Bold";
+}
+
+.homeCopy strong a {
+  font-family: "SpaceMono-Regular";
+  text-transform: uppercase;
+}
+
+/* .homeCopyWrapper:after {
   content: '';
   display: block;
   width: 100%;
   height: 10vw;
-  background-image: url(/bottom-black-bg.png);
+  background-color: url(/bottom-black-bg.png);
   background-size: 100% auto;
   background-repeat: no-repeat;
   background-position: center bottom;
   margin-top: -1px;
-}
+} */
 
 .homeCopyButton {
   background-color: #20A6FF;
 }
 
 .homeImage {
-  width: 281px;
+  min-width: 100vw;
   right: 0;
-  top: calc(-10vw - 50px)
+  top: -4vw;
 }
