--- a/src/components/hero.module.css
+++ b/src/components/hero.module.css
@@ -4,7 +4,7 @@
   
 }
 
-.heroHeadline {
+/* .heroHeadline {
   height: calc(100vh + 5rem);
   margin-top: -5rem;
   margin-bottom: 5rem;
@@ -13,14 +13,14 @@
   align-items: center;
   flex-direction: column;
   justify-content: center;
-}
+} */
 
-@media only screen and (min-width: 639px) {
+/* @media only screen and (min-width: 639px) {
   .heroHeadline {
     height: calc(100vh - 7rem);
     position: sticky;
   }
-}
+} */
 
 .image {
   max-width: 716px;
@@ -44,8 +44,8 @@
   margin-bottom: 28px;
 }
 
-@media only screen and (min-width: 639px) {
+/* @media only screen and (min-width: 639px) {
   .heroImageWrapper {
     margin-bottom: 250px;
   }
-}
+} */
