--- a/src/components/hero.module.css
+++ b/src/components/hero.module.css
@@ -7,13 +7,15 @@
   margin-top: -80px;
   margin-left: auto;
   margin-right: auto;
-  max-width: 600px;
   position: relative;
+  min-height: 120px;
+  max-width: 295px;
 }
 
 @media only screen and (min-width: 639px) {
   .heroHeadline {
     margin-top: -120px;
+    max-width: 600px;
   }
 }
 
