--- a/src/components/hero.module.css
+++ b/src/components/hero.module.css
@@ -4,11 +4,12 @@
 }
 
 .heroHeadline {
+  box-sizing: border-box;
   margin-top: -80px;
   margin-left: auto;
   margin-right: auto;
   position: relative;
-  min-height: 120px;
+  min-height: 168px;
   max-width: 295px;
 }
 
