--- a/src/components/base.css
+++ b/src/components/base.css
@@ -286,12 +286,16 @@ p {
   display: block;
   position: absolute;
   top: 36px;
-  right: 24px;
-  
+  right: 20px;
   z-index: 1;
-  
   -webkit-user-select: none;
   user-select: none;
+}
+
+@media only screen and (min-width: 639px) {
+  .menu {
+    right: 24px;
+  }
 }
 
 .menu input {
@@ -511,9 +515,16 @@ p {
 
 .blogMenu {
   display: inline-block;
-  padding: 12px 14px;
   position: relative;
+}
+.blogMenu button {
+  padding: 12px 14px;
+  text-align: left;
   width: 150px;
+}
+.blogMenu button[aria-expanded="true"] {
+  --tw-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .blogMenu ul {
