Updating blog ui

--- a/src/components/base.css
+++ b/src/components/base.css
@@ -517,11 +517,13 @@ p {
   display: inline-block;
   position: relative;
 }
+
 .blogMenu button {
   padding: 12px 14px;
   text-align: left;
   width: 150px;
 }
+
 .blogMenu button[aria-expanded="true"] {
   --tw-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
@@ -539,4 +541,10 @@ p {
 
 .blogMenu ul.visible {
   visibility: visible;
+}
+
+.blogContainer a:hover p,
+.blogContainer a:active p,
+.blogContainer a:focus p {
+  color: #000;
 }
