--- a/src/components/base.css
+++ b/src/components/base.css
@@ -9,6 +9,7 @@
   src: url("/fonts/AllianceNo1-Bold.ttf") format("truetype");
   font-display: swap;
 }
+
 @font-face {
   font-family: "AllianceNo1-Light";
   font-weight: 400;
@@ -16,6 +17,7 @@
   src: url("/fonts/AllianceNo1-Light.woff") format("woff");
   font-display: swap;
 }
+
 @font-face {
   font-family: "AllianceNo2-Light";
   font-weight: 400;
@@ -23,6 +25,7 @@
   src: url("/fonts/AllianceNo2-Light.woff") format("woff");
   font-display: swap;
 }
+
 @font-face {
   font-family: "DrukWide-Bold";
   font-weight: 400;
@@ -30,6 +33,7 @@
   src: url("/fonts/DrukWide-Bold.ttf") format("truetype");
   font-display: swap;
 }
+
 @font-face {
   font-family: "SpaceMono-Bold";
   font-weight: 400;
@@ -37,6 +41,7 @@
   src: url("/fonts/SpaceMono-Bold.ttf") format("truetype");
   font-display: swap;
 }
+
 @font-face {
   font-family: "SpaceMono-BoldItalic";
   font-weight: 400;
@@ -44,6 +49,7 @@
   src: url("/fonts/SpaceMono-BoldItalic.ttf") format("truetype");
   font-display: swap;
 }
+
 @font-face {
   font-family: "SpaceMono-Italic";
   font-weight: 400;
@@ -51,12 +57,14 @@
   src: url("/fonts/SpaceMono-Italic.ttf") format("truetype");
   font-display: swap;
 }
+
 @font-face {
   font-family: "SpaceMono-Regular";
   src: url("/fonts/SpaceMono-Regular.ttf") format("truetype");
 }
 
-html, body {
+html,
+body {
   overflow-x: hidden;
 }
 
@@ -123,7 +131,7 @@ a:hover {
   color: #8CD0FF;
 }
 
-.underlineHover:after{  
+.underlineHover:after {
   background: none repeat scroll 0 0 transparent;
   bottom: 0;
   color: #8CD0FF;
@@ -140,8 +148,8 @@ a:hover {
 .underlineHover:active:after,
 .underlineHover:focus:after,
 .underlineHover:hover:after {
-  width: 100%; 
-  left: 0; 
+  width: 100%;
+  left: 0;
 }
 
 .header__link {
@@ -231,9 +239,9 @@ p {
   list-style: none;
 }
 
-  .list-inline li {
-    display: inline-block;
-  }
+.list-inline li {
+  display: inline-block;
+}
 
 .blog img {
   max-width: 80%;
@@ -304,12 +312,14 @@ p {
   width: 36px;
   height: 32px;
   position: absolute;
-  
+
   cursor: pointer;
-  
-  opacity: 0; /* hide this */
-  z-index: 2; /* and place it over the hamburger */
-  
+
+  opacity: 0;
+  /* hide this */
+  z-index: 2;
+  /* and place it over the hamburger */
+
   -webkit-touch-callout: none;
 }
 
@@ -319,17 +329,17 @@ p {
   height: 2px;
   margin-bottom: 8px;
   position: relative;
-  
+
   background: black;
   border-radius: 3px;
-  
+
   z-index: 1;
-  
+
   transform-origin: 4px 0px;
-  
-  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
-              background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
-              opacity 0.55s ease;
+
+  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0),
+    background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0),
+    opacity 0.55s ease;
 }
 
 .menu span:first-child {
@@ -340,13 +350,13 @@ p {
   transform-origin: 0% 100%;
 }
 
-.menu input:checked ~ span {
+.menu input:checked~span {
   opacity: 1;
   transform: rotate(45deg) translate(-3px, -15px);
   background: white;
 }
 
-.menu input:checked ~ span:nth-last-child(3) {
+.menu input:checked~span:nth-last-child(3) {
   transform: rotate(-45deg) translate(-8px, 17px);
 }
 
@@ -359,20 +369,20 @@ p {
   margin: 0;
   padding: 50px;
   box-sizing: border-box;
-  
+
   background: black;
   color: white;
   list-style-type: none;
   -webkit-font-smoothing: antialiased;
   /* to stop flickering of text in safari */
-  
+
   /* transform-origin: 0% 0%; */
   transform: translate(100vw, 0);
-  
-  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+
+  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0);
 }
 
-.menu input:checked ~ .nav {
+.menu input:checked~.nav {
   transform: none;
 }
 
@@ -393,7 +403,7 @@ p {
 }
 
 .shading {
-  background: linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%);
+  background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
   height: 150px;
   margin-top: -150px;
   position: absolute;
@@ -411,9 +421,17 @@ p {
 
 
 @keyframes drawArc {
-  0%  { -webkit-transform: rotate(0deg) translateX(100vw) translateY(0) rotate(0deg); }
-  50%  { -webkit-transform: rotate(-90deg) translateX(50vw) translateY(0) rotate(90deg); }
-  100%  { -webkit-transform: rotate(-180deg) translateX(0) translateY(0) rotate(180deg); }
+  0% {
+    -webkit-transform: rotate(0deg) translateX(100vw) translateY(0) rotate(0deg);
+  }
+
+  50% {
+    -webkit-transform: rotate(-90deg) translateX(50vw) translateY(0) rotate(90deg);
+  }
+
+  100% {
+    -webkit-transform: rotate(-180deg) translateX(0) translateY(0) rotate(180deg);
+  }
 }
 
 .speakingImage {
@@ -484,6 +502,7 @@ p {
   from {
     -webkit-transform: rotate(0deg);
   }
+
   to {
     -webkit-transform: rotate(359deg);
   }
@@ -501,11 +520,9 @@ p {
 }
 
 @media only screen and (min-width: 639px) {
-
-
   .sun {
     height: 65px;
-    width: 65px; 
+    width: 65px;
   }
 
   .sunMoving image {
@@ -514,34 +531,14 @@ p {
   }
 }
 
-.blogMenu {
+.blogMenu li:after {
+  content: '/';
   display: inline-block;
-  position: relative;
+  margin-left: 10px;
 }
 
-.blogMenu button {
-  padding: 12px 14px;
-  text-align: left;
-  width: 150px;
-}
-
-.blogMenu button[aria-expanded="true"] {
-  --tw-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.blogMenu ul {
-  visibility: hidden;
-  z-index: 1;
-  position: absolute;
-  background-color: white;
-  padding: 14px;
-  left: 0;
-  right: 0;
-}
-
-.blogMenu ul.visible {
-  visibility: visible;
+.blogMenu li:last-of-type:after {
+  display: none;
 }
 
 .blogContainer a:hover p,
